[package]
name = "ckb-notify"
version = "0.5.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
fnv = "1.0"
ckb-core = { path = "../core" }
numext-fixed-hash = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
channel = { package= "crossbeam-channel", version = "0.3" }
log = "0.4"
